Fix: Resolve AOS animations hidden due to overflow-x restriction

--- a/style.css
+++ b/style.css
@@ -229,13 +229,15 @@ footer ul {
   }
 }
 @media (max-width: 768px) {
+  html {
+    overflow-x: hidden;
+  }
   html,
   body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
   }
   .navbar__div li {
     display: none;
